# mini-me

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-security-audit.yml  trivy-dependency-scan.yml
docs/: GLOASSARY.md  plan_30_jours_agent_ia.md
