[project]
name = "mini-me"
version = "0.1.0"
description = "My first personal agentic agent"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.1.3",
    "python-dotenv>=1.2.0",
    "langchain-tavily>=0.2.13",
    "tavily-python>=0.7.13",
    "tavily>=1.1.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.10.2",
    "langchain-text-splitters>=1.1.2",
    "mcp>=1.21.1",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "langgraph-api>=0.5.37",
    "ipywidgets>=8.1.8",
    "sounddevice>=0.5.3",
    "scipy>=1.16.3",
    "langchain-google-genai>=3.1.0",
    "langsmith>=0.8.5",
    "langchain-core>=1.3.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "C90", # mccabe (complexité cyclomatique)
    "S",   # flake8-bandit (sécurité de base)
    "UP",  # pyupgrade (modernisation Python 3.12+)
]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "standard"
include = ["packages/mini_me"]
reportMissingTypeStubs = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnusedImport = "error"
venvPath = "."
venv = ".venv"
